--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 		<span></span>
 	</section>
 	<section class="buttons">
+		<div class="wrapper">
 		<button id="generate-male">Male</button>
-		<div class="logo"></div>
+		</div>
+		<div class="wrapper">
+		<div class="logo">
+			<p>simple</p>
+			<p>name</p>
+			<p>generator</p>
+		 </div>
+		</div>
+		<div class="wrapper">
 		<button id="generate-female">Female</button>
+		</div>
 	</section>
 	<section class="app">
 		<div></div>
