--- a/index.html
+++ b/index.html
@@ -8,30 +8,44 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<section id="timestamp">
-		<span></span>
-	</section>
-	<section class="buttons">
-		<div class="wrapper">
-		<button id="generate-male">Male</button>
-		</div>
-		<div class="wrapper">
-		<div class="logo">
-			<p>simple</p>
-			<p>name</p>
-			<p>generator</p>
-		 </div>
-		</div>
-		<div class="wrapper">
-		<button id="generate-female">Female</button>
-		</div>
-	</section>
-	<section class="app">
-		<div></div>
-		<div></div>
-		<div></div>
-	</section>
-	<section class="author"></section>
+	<main>
+		<section id="timestamp">
+			<span></span>
+		</section>
+		<section class="buttons">
+			<button id="generate-male">
+				<div class="wrapper">
+					<div>M</div>
+					<div>a</div>
+					<div>l</div>
+					<div>e</div>
+				</div>
+			</button>
+			<div class="logo">
+				<div>Simple</div>
+				<div>Name</div>
+				<div>Generator</div>	
+			</div>
+			<button id="generate-female">
+				<div class="wrapper">
+					<div>F</div>
+					<div>e</div>
+					<div>m</div>
+					<div>a</div>
+					<div>l</div>
+					<div>e</div>
+				</div>
+			</button>
+		</section>
+		<section class="app">
+			<div></div>
+			<hr>
+			<div></div>
+			<hr>
+			<div></div>
+		</section>
+		<section class="author">nerzhin.design</section>
+	</main>
 	<script src="date.js"></script>
 	<script src="app.js"></script>
 </body>
