--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 				</div>
 			</button>
 		</section>
-		<section class="app">
-			<div></div>
-			<hr>
-			<div></div>
-			<hr>
-			<div></div>
+		<section class="footer">
+			<section class="app">
+				<div></div>
+				<div></div>
+				<div></div>
+			</section>
+			<section class="author"><a href="https://nerzhin.design">nerzhin.design</a></section>
 		</section>
-		<section class="author">nerzhin.design</section>
 	</main>
 	<script src="date.js"></script>
 	<script src="app.js"></script>
