some styling + new fetching data

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<div></div>
 				<div></div>
 				<div></div>
+				<div></div>
 			</section>
 			<section class="author"><a href="https://nerzhin.design">nerzhin.design</a></section>
 		</section>
