added images for special moves

--- a/02rockpaperscissors/index.html
+++ b/02rockpaperscissors/index.html
@@ -28,11 +28,11 @@
 	<section class="player">
 
 		<section class="special-moves">
-			<img src="" alt="rock" id="rock">
-			<img src="" alt="paper" id="paper">
-			<img src="" alt="scissors" id="scissors">
-			<img src="" alt="lizard" id="lizard">
-			<img src="" alt="spock" id="spock">
+			<img src="icons/rock.png" alt="rock" id="rock">
+			<img src="icons/paper.png" alt="paper" id="paper">
+			<img src="icons/scissors.png" alt="scissors" id="scissors">
+			<img src="icons/lizard.png" alt="lizard" id="lizard">
+			<img src="icons/spock.png" alt="spock" id="spock">
 		</section>
 
 		<footer class="statistics">
