first cosmetic changes

--- a/02rockpaperscissors/index.html
+++ b/02rockpaperscissors/index.html
@@ -34,7 +34,13 @@
 			<img src="icons/lizard.png" alt="lizard" id="lizard">
 			<img src="icons/spock.png" alt="spock" id="spock">
 		</section>
-
+		<section class="special-moves-titles">
+			<img src="icons/rock-title.png" alt="rock" id="rock">
+			<img src="icons/paper-title.png" alt="paper" id="paper">
+			<img src="icons/scissors-title.png" alt="scissors" id="scissors">
+			<img src="icons/lizard-title.png" alt="lizard" id="lizard">
+			<img src="icons/spock-title.png" alt="spock" id="spock">
+		</section>
 		<footer class="statistics">
 			<span class="won">Won: <span>2</span></span>
 			<span class="lost">Lost: <span>3</span></span>
