--- a/02rockpaperscissors/index.html
+++ b/02rockpaperscissors/index.html
@@ -42,15 +42,15 @@
 			<img src="icons/spock-title.png" alt="spock" id="spock">
 		</section>
 		<footer class="statistics">
-			<span class="won">Won: <span>2</span></span>
-			<span class="lost">Lost: <span>3</span></span>
-			<span class="kda">W/L: <span>0.001</span></span>
+			<span class="won">Won: <span>0</span></span>
+			<span class="lost">Lost: <span>0</span></span>
+			<span class="kda">W/L: <span>0</span></span>
 		</footer>
 	</section>
 
 
 
 
-<script src="app.js"></script>
+<script src="app2.js"></script>
 </body>
 </html>
