--- a/02rockpaperscissors/index.html
+++ b/02rockpaperscissors/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="animate.css/animate.min.css">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
