--- a/03tempconverter/index.html
+++ b/03tempconverter/index.html
@@ -4,11 +4,13 @@
 	<title>Day 3. Temperature converter</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:100,400" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+	<main>
+		<h1>thermometer</h1>
+		<small>tiny converter from °F to °C</small>
 
 
 
