--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 <body>
 <main>
 
-	<iframe src="//coub.com/embed/30p2f?muted=false&autostart=false&originalSize=false&startWithHD=true" allowfullscreen="true" frameborder="0" width="640" height="416"></iframe><script async src="//c-cdn.coub.com/embed-runner.js"></script>
+	
+
+	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/VxmbDcoVmuQ?
+    version=3&
+    loop=1&
+    autoplay=1&
+    rel=0&
+    showinfo=0&
+    controls=0&
+    autohide=1
+" frameborder="0" allowfullscreen></iframe>
 
 </main>
 </body>
