--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
 
 	
 
-	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/VxmbDcoVmuQ?
-    version=3&
-    loop=1&
-    autoplay=1&
-    rel=0&
-    showinfo=0&
-    controls=0&
-    autohide=1
+	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/VxmbDcoVmuQ?version=3&loop=1&autoplay=1&rel=0&showinfo=0&controls=0&autohide=1
 " frameborder="0" allowfullscreen></iframe>
 
 </main>
