--- a/coding-challenge/day4/index.html
+++ b/coding-challenge/day4/index.html
@@ -9,16 +9,18 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<header>
-		<h1>Caesar Cipher</h1>
-		<small>deliver your secret messages since AD 56</small>
-	</header>
+	<div class="container">
+		<header>
+			<h1>Caesar Cipher</h1>
+			<small>deliver your secret messages since AD 56</small>
+		</header>
 
-	<main>
-		<input type="text" placeholder="encrypt">
-		<input type="text" placeholder="decrypt">
-		<button class="btn" type="button">copy</button>
-	</main>
+		<main>
+			<input type="text" placeholder="encrypt">
+			<input type="text" placeholder="decrypt">
+			<button class="btn" type="button">copy <img src="copy-icon.svg"></button>
+		</main>
+	</div>
 	<script src="app.js"></script>
 </body>
 </html>
