--- a/coding-challenge/day5/index.html
+++ b/coding-challenge/day5/index.html
@@ -24,7 +24,7 @@
 		<button type="button">Z</button><button type="button">X</button><button type="button">C</button><button type="button">V</button><button type="button">B</button><button type="button">N</button><button type="button">M</button>
 	</div>
 </section>
-
-<script src="app.js"></script>
+<button id="fff">hello</button>
+<script src="app3.js"></script>
 </body>
 </html>
