--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 
 	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/VxmbDcoVmuQ?version=3&loop=1&autoplay=1&rel=0&showinfo=0&controls=0&autohide=1
 " frameborder="0" allowfullscreen></iframe>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-99447989-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </main>
 </body>
 </html>
