--- a/coding-challenge/day2/index.html
+++ b/coding-challenge/day2/index.html
@@ -29,19 +29,28 @@
 	<section class="player">
 
 		<section class="special-moves">
-			<img src="icons/rock.png" alt="rock" id="rock">
-			<img src="icons/paper.png" alt="paper" id="paper">
-			<img src="icons/scissors.png" alt="scissors" id="scissors">
-			<img src="icons/lizard.png" alt="lizard" id="lizard">
-			<img src="icons/spock.png" alt="spock" id="spock">
+			<div>
+				<img src="icons/rock.png" id="rock">
+				<img src="icons/rock-title.png" alt="rock" class="special-moves-title">
+			</div>
+			<div>
+				<img src="icons/paper.png" id="paper">
+				<img src="icons/paper-title.png" alt="paper" class="special-moves-title">
+			</div>
+			<div>
+				<img src="icons/scissors.png" id="scissors">
+				<img src="icons/scissors-title.png" alt="scissors" class="special-moves-title">
+			</div>
+			<div>
+				<img src="icons/lizard.png" alt="lizard" id="lizard">
+				<img src="icons/lizard-title.png" alt="lizard" class="special-moves-title">
+			</div>
+			<div>
+				<img src="icons/spock.png" alt="spock" id="spock">
+				<img src="icons/spock-title.png" alt="spock" class="special-moves-title">
+			</div>
 		</section>
-		<section class="special-moves-titles">
-			<img src="icons/rock-title.png" alt="rock" id="rock">
-			<img src="icons/paper-title.png" alt="paper" id="paper">
-			<img src="icons/scissors-title.png" alt="scissors" id="scissors">
-			<img src="icons/lizard-title.png" alt="lizard" id="lizard">
-			<img src="icons/spock-title.png" alt="spock" id="spock">
-		</section>
+		
 		<footer class="statistics">
 			<span class="won">Won: <span>0</span></span>
 			<span class="lost">Lost: <span>0</span></span>
@@ -52,7 +61,7 @@
 
 
 
-<script src="app2.js"></script>
+<script src="app.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
