--- a/coding-challenge/haiku-generator/index.html
+++ b/coding-challenge/haiku-generator/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
-
-
+	<title>Day 6 - Poor haiku generator</title>
+	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+	<link rel="stylesheet" href="tippy.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<main>
+		<section class="first-row"></section>
+		<section class="second-row"></section>
+		<section class="third-row"></section>
+	</main>
+	<footer>
+		<span>nerzhin.design</span>
+	</footer>
 
+	<button type="button">generate</button>
+	<script src="tippy.min.js"></script>
+	<script src="app.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+	  ga('create', 'UA-99447989-1', 'auto');
+	  ga('send', 'pageview');
 
-
-<script src="app.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-99447989-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+	</script>
 </body>
 </html>
