--- a/coding-challenge/day6-7/index.html
+++ b/coding-challenge/day6-7/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Day 6 — </title>
+	<title>Day 6 — Magic 8-ball</title>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<section class="answer">
-	
-</section>
+	<section class="answer">
+		<div class="eightball">
+			
+			<div class="eightball-answer">
+				<span class="answer-text"></span>
+			</div>
+			
+		</div>
+	</section>
 
-<input type="text" id="question">
-<button type="button" id="start">shake</button>
+	<section class="question">
+		<h3>concentrate, ask question to the Universe and </h3>
+		<div><button type="button" class="btn">shake</button></div>
+	</section> 
 
 <script src="app.js"></script>
 <script>
