--- a/coding-challenge/day4/index.html
+++ b/coding-challenge/day4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Day 4 — encrypt/decrypt algorithm</title>
+	<title>Caesar Cipher</title>
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
