--- a/coding-challenge/day6-7/index.html
+++ b/coding-challenge/day6-7/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Day 6 — Magic 8-ball</title>
+	<title>Magic 8-ball</title>
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
@@ -22,7 +22,7 @@
 	</section>
 
 	<section class="question">
-		<h3>concentrate, ask question to the Universe and </h3>
+		<h3><mark>concentrate, ask question to the Universe and </mark></h3>
 		<div><button type="button" class="btn">shake</button></div>
 	</section> 
 
