--- a/coding-challenge/day1/index.html
+++ b/coding-challenge/day1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Day 1. Name generator</title>
+	<title>Name generator</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
