--- a/coding-challenge/day5/index.html
+++ b/coding-challenge/day5/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Day 5 — Hangman game</title>
+	<title>Hangman</title>
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
