--- a/coding-challenge/day10/index.html
+++ b/coding-challenge/day10/index.html
@@ -2,31 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>  </title>
+  <title> </title>
   <meta name="description" content="Coding challenge">
   <meta name="author" content="Gleb Nerzhin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> <!-- font-family: 'Roboto', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow" rel="stylesheet"> <!-- font-family: 'Londrina Shadow', cursive; -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-<div class="container">
-	<div class="row">
-		<div class="ten columns">
-			<h1>U're old man</h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="u-full-width">
-			<input type="date" id="post">
-		</div>
-	</div>
 
-</div>
-
-
-
+<script src="js/app.js"></script>
 </body>
 </html>
