--- a/coding-challenge/day10/index.html
+++ b/coding-challenge/day10/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title> </title>
+  <title> FizzBuzzPopWhack </title>
   <meta name="description" content="Coding challenge">
   <meta name="author" content="Gleb Nerzhin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
 
 
 <script src="js/app.js"></script>
