--- a/reactpractice/index.html
+++ b/reactpractice/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Hello, React!</title>
+  <meta charset="UTF-8">
+  <title>Hello, React!</title>
+  <link rel="stylesheet" href="/build/css/style.css">
+  <link rel="shortcut icon" href="http://facebook.github.io/react/favicon.ico">
 </head>
 <body>
+  
+    <main>
+      <!-- This is where our React app will go -->
+    </main>
 
-	<main>
-	<!-- for react app -->
-	</main>
+  <script src="/build/main.js"></script>
 
-
-<script src="scripts/main.js"></script>
 </body>
 </html>
